# clup

./: README.md  index.html  time_report.md
ATD/: main.tex
ATD/Files/: 1 - introduction.tex  2 - installation.tex  3 - acceptance_test_cases.tex  4 - code inspection.tex  (+4 more)
DD/: commandsFile.tex  main.tex
ITD/: stores.txt
ITD/CLupServer/clup-server/: .env  .gitignore  CLup.py  Dockerfile  config.py  data.json  docker-entrypoint.sh  pyproject.toml  requirements.txt  start.py  wsgi.py
ITD/CLupServer/clup-server/clup_server/: CLup.py  __init__.py  auth_manager.py  config.py  db_populate.py  information_provider.py  models.py  orm.py  queue_manager.py  routes.py  schemas.py  ticket_manager.py
ITD/CLupServer/clup-server/clup_server/cfg/: email_regex.cfg
ITD/CLupServer/clup-server/clup_server/model/: __init__.py  models.py  orm.py  schemas.py
ITD/CLupServer/clup-server/tests/: data.json  test_auth.py  test_clup_server.py  test_fixtures.py  test_ticket.py
ITD/CLupServer/clup-server/tests/assets/: comuni.json  generate_data.py
Implementation/CLupServer/clup-server/: pyproject.toml
Implementation/CLupServer/clup-server/clup_server/: CLup.py  api.py  auth_manager.py  config.py  information_provider.py
Implementation/CLupServer/clup-server/clup_server/model/: __init__.py  clup_user.py  models.py  opening_hours.py  orm.py  store.py  ticket.py
Implementation/CLupServer/clup-server/tests/: test_sql_alchemy.py
Implementation/CLupServer/clup-server/tests/model/: model_test.py
RASD/: .gitignore  alloy-style.sty  commandsFile.tex  main.tex
assets/: NOTICES
deliveries/: README.md
questionnaires/: draft.md
(+105 files in other folders)
