[tool.poetry]
name = "clup-server"
version = "0.1.0"
description = ""
authors = ["Dario Passarello <dario.passarello@gmail.com>", 
           "Davide Luca Merli <davide.merli@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^1.1.2"
SQLAlchemy = "^1.3.22"
psycopg2-binary = "^2.8.6"
Flask-SQLAlchemy = "^2.4.4"
Flask-RESTful = "^0.3.8"
marshmallow = "^3.10.0"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.24.1"
Flask-JWT-Extended = "^3.25.0"
email-validator = "^1.1.2"
python-dotenv = "^0.15.0"
Flask-Testing = "^0.8.1"
flask-cors = "^3.0.10"
gunicorn = "^20.0.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylint-flask = "^0.6"
pylint-sqlalchemy = "^0.2.0"
pylint-flask-sqlalchemy = "^0.2.0"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
